# educational-videos

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.mvp.yml  pyproject.toml  pytest.ini
.deepeval/: .deepeval_telemetry.txt
.github/: CONTRIBUTING.md
Generation pipline/: .gitignore  design_and_sync_report.txt  looptest.py  pipeline.py
app/: __init__.py  main.py
code_and_log/: agent_config.yaml
docs/: vision-agents.md
evals/: pipeline_cases.jsonl  pipeline_eval.py
frontend/: api_client.py  streamlit_app.py
rag-foundation/: .env.example  requirements.txt
results/: eval_report.txt
scripts/: docker-entrypoint.sh  run_api.py  run_dev.py
structured-outputs/: .env.example  evaluation_report.md
tests/: test_integration.py  test_narration_guard.py  test_pipeline.py  test_pipeline_eval_gate.py  test_pipeline_graph.py  test_pipeline_rag_wiring.py  test_pipeline_task_queue.py  test_prda_followups.py  test_rag_tool.py  test_repair_loop.py  test_schemas.py  test_timeline_render_frames.py  test_vision_recovery.py
vision_agent_poc/: .dockerignore  .env.example  Dockerfile  (+5 more)
vlm_render_mapper/: MANIFEST.in  README.md  conftest.py  my_plan.json  pyproject.toml  sample_session.json  setup.py  test_results.txt
vlm_render_mapper/output/: my_render_plan.json  sample_render_plan.json
vlm_render_mapper/schemas/: render_plan_schema.json
vlm_render_mapper/src/vlm_render_mapper/: __init__.py  cli.py  mapper.py  parser.py  schema.py  timing.py
vlm_render_mapper/tests/: test_cli_schema_validation.py  test_mapper.py  test_parser.py  test_timing.py
(+150 files in other folders)
